setup ui of login and signup page and allow frontend in backend using cors

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -11,8 +11,9 @@
       rel="stylesheet" />
     <title>Leet Lab</title>
   </head>
-  <body class="antialiased font-normal text-[16px] leading-normal">
-    <div id="root"></div>
+  <body
+    class="antialiased font-normal text-[16px] leading-normal dark:bg-black/80 dark:text-white/80 bg-white/80 text-black/80">
+    <main id="root"></main>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
