--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,14 +2,14 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
       rel="stylesheet" />
-    <title>LeetLab</title>
+    <title>LeetFire</title>
   </head>
   <body
     class="antialiased font-normal text-[16px] leading-normal dark:bg-black/80 dark:text-white/80 bg-white/80 text-black/80">
